# reversi

./: AIPlayer.cpp  AIPlayer.h  BasicLogic.cpp  BasicLogic.h  Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  CellCounter.cpp  CellCounter.h  GameFlow.cpp  GameFlow.h  HumanPlayer.cpp  HumanPlayer.h  Menu.cpp  Menu.h  Player.h  Point.cpp  Point.h  main.cpp  uml.puml
etc/: info.txt  log.txt
exe/: client.out  client.txt  server.out
gtest_src/gtest/: gtest.h
include/: Board.h  CellCounter.h  Command.h  CommandsManager.h  GameFlow.h  JoinCommand.h  Menu.h  PrintListCommand.h  RemoteGame.h  SubMenu.h
server/: Server.cpp  main.cpp
src/: AIPlayer.cpp  BasicLogic.cpp  Cell.cpp  CellCounter.cpp  CommandsManager.cpp  GameFlow.cpp  HumanPlayer.cpp  JoinCommand.cpp  Menu.cpp  PrintListCommand.cpp  RemoteGame.cpp  StartCommand.cpp  main.cpp
src/client/: makefile
src/client/gtest_src/gtest/: gtest.h
src/client/include/: GameLogic.h  HumanPlayer.h  Menu.h  RemoteGame.h  StartCommand.h  SubMenu.h
src/client/src/: AIPlayer.cpp  Board.cpp  GameFlow.cpp  HumanPlayer.cpp  JoinCommand.cpp  Menu.cpp  Point.cpp  PrintListCommand.cpp  RemoteGame.cpp  SubMenu.cpp  main.cpp
src/client/tests/: test_AIPlayer.cpp  test_BasicLogic.cpp  test_Board.cpp
src/server/: Server.cpp  Server.h  main.cpp  makefile
src/server/include/: CloseCommand.h  Command.h  CommandsManager.h  GameCollection.h  GameHolder.h  JoinCommand.h  PlayCommand.h  PrintListCommand.h  Server.h  ServerFlow.h  StartCommand.h  Task.h  ThreadPool.h
src/server/src/: CloseCommand.cpp  CommandsManager.cpp  GameCollection.cpp  GameHolder.cpp  JoinCommand.cpp  PrintListCommand.cpp  Server.cpp  ServerFlow.cpp  StartCommand.cpp  ThreadPool.cpp  main.cpp
tests/: gtest_main.cpp  test_AIPlayer.cpp  test_BasicLogic.cpp
